<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".activity.ChatActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/chat_toolbar"
            style="@style/Theme.Chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:paddingTop="0dp"
            android:theme="@style/Theme.Chat"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="8dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleMargin="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:clipChildren="false"
                    android:clipToPadding="true"
                    android:orientation="horizontal"
                    android:focusable="true">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="2dp"
                        android:background="@null"
                        android:contentDescription="@string/back_text"
                        android:tint="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back_button" />

                    <ImageView
                        android:id="@+id/chat_profile"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="26dp"
                        android:contentDescription="@string/profile"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/user_placeholder" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:paddingTop="0dp">

                    <TextView
                        android:id="@+id/username_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/status"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="onilne"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/username_text" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:foregroundGravity="center"
            android:maxHeight="100dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:autofillHints=""
                android:background="@null"
                android:ems="10"
                android:fadeScrollbars="false"
                android:focusableInTouchMode="true"
                android:hint="@string/type_a_message"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences|textMultiLine"
                android:maxHeight="100dp"
                android:maxLength="2000"
                android:maxLines="4"
                android:padding="10dp"
                android:scrollbarFadeDuration="1"
                android:scrollbars="vertical" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/send"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:cropToPadding="false"
            android:elevation="0dp"
            android:focusable="true"
            android:scaleType="center"
            android:scrollbarFadeDuration="500"
            android:scrollbars="vertical"
            app:backgroundTint="@color/green_blue"
            app:fabCustomSize="47dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="24dp"
            app:srcCompat="@drawable/ic_baseline_send_24"
            app:tint="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />

        <TextView
            android:id="@+id/day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="1"
            android:background="@drawable/oval_texteview"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat_toolbar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scroll_to_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:visibility="gone"
            app:backgroundTint="#FFFFFF"
            app:fabSize="mini"

            app:layout_constraintBottom_toTopOf="@+id/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>